test/libsolidity/syntaxTests/storageLayoutSpecifier/literal_with_underscore.sol
contract A layout at 42_0e10 {}
contract B layout at 0x1234_ABCD {}
contract C layout at 1234_000 {}
// ----
// UnimplementedFeatureError 1834: (0-31): Code generation is not supported for contracts with specified storage layout base.
